Fix T63775: Toolbar icons ignore BLENDER_SYSTEM_DATAFILES

The environment variable to locate system data-files was
ignored by toolbar icons.

Add bpy.utils.system_resource
to match Blender's internal data-file access.