release/scripts/modules/bpy/utils/__init__.py
@@ -65,6 +65,7 @@ from _bpy import (
     script_paths as _bpy_script_paths,
     unregister_class,
     user_resource as _user_resource,
+    system_resource,
 )
 
 import bpy as _bpy
